Closed Bug 519999 Opened 16 years ago Closed 16 years ago

Assertion failure: unsigned(slots) == NativeStackSlots(cx, 1) - fp->argc - 2 - fp->script->nfixed - 1 - js1_5/Regress/regress-450369.js

Categories

(Core :: JavaScript Engine, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: bc, Assigned: dvander)

References

Details

(Keywords: assertion, regression, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

browser jsreftests debug tracemonkey regression within 1 day. js1_5/Regress/regress-450369.js Assertion failure: unsigned(slots) == NativeStackSlots(cx, 1) - fp->argc - 2 - fp->script->nfixed - 1, at /work/mozilla/builds/1.9.3-tracemonkey/mozilla/js/src/jsrecursion.cpp:506 probably related regressions js1_5/extensions/regress-420869-01.js | Throw too much recursion instead of script stack space quota Expected value 'InternalError: too much recursion', Actual value 'InternalError: script stack space quota is exhausted' item 1 js1_5/extensions/regress-424683-01.js | Throw too much recursion instead of script stack space quota Expected value 'InternalError: too much recursion', Actual value 'InternalError: script stack space quota is exhausted' item 1
Flags: in-testsuite+
Due to skipped revisions, the first bad revision could be any of: changeset: 33278:910f0c1ca2e5 user: David Anderson <danderson@mozilla.com> date: Wed Sep 30 15:28:00 2009 -0700 summary: Trace recursive function calls (bug 459301, r=gal). changeset: 33279:ca411010382c user: David Anderson <danderson@mozilla.com> date: Wed Sep 30 16:15:23 2009 -0700 summary: Build fixes (recursion fallout, no_r=me). changeset: 33280:58c8861b79df user: David Anderson <danderson@mozilla.com> date: Wed Sep 30 16:29:46 2009 -0700 summary: Bustage fix (recursion fallout 2).
OS: Mac OS X → All
The current recursion tracing code doesn't support missing or extra arguments. This can be a follow-up bug - for now, we should stop regressing.
Assignee: general → dvander
Status: NEW → ASSIGNED
Attachment #404083 - Flags: review?(brendan)
Comment on attachment 404083 [details] [diff] [review] disallow argc != nargs Right -- FYI, I'm allowing argc <= nargs for tail calls. /be
Attachment #404083 - Flags: review?(brendan) → review+
Ok that fixed the assertion but not the other failures. Do you want a separate bug?
(In reply to comment #5) New bug sounds good. Hrmm.. it looks like we're tracing the recursion in those tests. I'm not sure what to do there. I could introduce a new exit that propagates a "too much recursion" error up. Or the tests could forcefully disable tracing.
filed bug 520240.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
v 1.9.3
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: