Fixed accidentally trying to trace recursive argc!=nargs which is not yet supported (bug 519999, r=brendan).